# minifb_wgpu_web_and_desktop

./: Cargo.toml  LICENSE  README.md
minifb_wgpu_example/: Cargo.toml
minifb_wgpu_example/src/: main.rs  main_desktop.rs  main_web.rs  shader.wgsl
minifb_wgpu_example/web_resources/: index.html
src/: main.rs  main_web.rs
xtask/: Cargo.toml  README.md
xtask/src/: main.rs  run_wasm.rs
