[workspace]
resolver = "2"
members = ["minifb_wgpu_example", "xtask"]
default-members = ["minifb_wgpu_example"]

[patch.crates-io]
wgpu = { git = "https://github.com/wumpf/wgpu", branch = "better-webgpu-selection2" }
wgpu-types = { git = "https://github.com/wumpf/wgpu", branch = "better-webgpu-selection2" }
naga = { git = "https://github.com/wumpf/wgpu", branch = "better-webgpu-selection2" }
wgpu-hal = { git = "https://github.com/wumpf/wgpu", branch = "better-webgpu-selection2" }
#minifb = { path = "../rust_minifb" }
