[package]
name = "minifb_wgpu_example"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { version = "22.1.0", features = ["webgl"] } # Enable WebGL fallback.
minifb = "0.27.0"

# Logging, mostly since println can't be used on the web.
log = "0.4.22"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Web dependencies.
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
