[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.87"
env_logger = "0.11.5"
log = "0.4.22"
pico-args = "0.5.0"
# Need at least patch for windows path formatting.
wasm2map = { git = "https://github.com/mtolmacs/wasm2map.git", commit = "55978542eddc08cd43895999fb3ad5586020d837" }
xshell = "0.2.6"
